--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     	<link rel="shortcut icon" href="https://i.ibb.co/n0yL4dR/1679248787-Nagad-Logo-1.png" />
     <meta property="og:title" content="সহজেই তৈরি করুন নগদ ফে-ক পেমেন্ট স্ক্রিনশট – একদম বিনামূল্যে!" />
     <meta property="og:description" content="সহজেই তৈরি করুন নগদ ফে-ক পেমেন্ট স্ক্রিনশট – একদম বিনামূল্যে!" />
-    <meta property="og:image" content="https://i.ibb.co/s5x58pm/IMG-20240901-142834-101.jpg" />
+    <meta property="og:image" content="https://i.ibb.co.com/sbMZSj5/IMG-20241106-144730-053.jpg" />
     <meta name="robots" content="noindex, nofollow">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nagad Payment Ss</title>
